C/c4Database.h

    /** Opaque handle to an opened database. */
    typedef struct c4Database C4Database;
    //////// DOCUMENTS:


    /** Flags describing a document. */
    typedef enum {
        kDeleted        = 0x01,     /**< The document's current revision is deleted. */
        kConflicted     = 0x02,     /**< The document is in conflict. */
        kHasAttachments = 0x04,     /**< The document's current revision has attachments. */

        kExists         = 0x1000    /**< The document exists (i.e. has revisions.) */
    } C4DocumentFlags; // Note: Superset of VersionedDocument::Flags
    /** Flags that apply to a revision. */
    typedef enum {
        kRevDeleted        = 0x01, /**< Is this revision a deletion/tombstone? */
        kRevLeaf           = 0x02, /**< Is this revision a leaf (no children?) */
        kRevNew            = 0x04, /**< Has this rev been inserted since decoding? */
        kRevHasAttachments = 0x08  /**< Does this rev's body contain attachments? */
    } C4RevisionFlags; // Note: Same as Revision::Flags
    /** Describes a version-controlled document. */
    typedef struct {
        C4DocumentFlags flags;      /**< Document flags */
        C4Slice docID;              /**< Document ID */
        C4Slice revID;              /**< RevID of current revision */
        C4SequenceNumber sequence;  /**< Sequence at which doc was last updated */

        struct {
            C4Slice revID;
            C4RevisionFlags flags;
            C4SequenceNumber sequence;
            C4Slice body;
        } selectedRev;
    } C4Document;
    /** Opaque handle to a document enumerator. */
    typedef struct C4DocEnumerator C4DocEnumerator;
    //////// INSERTING REVISIONS:


    /** Adds a revision to a document, as a child of the currently selected revision
        (or as a root revision if there is no selected revision.)
        On success, the new revision will be selected.
        Must be called within a transaction.
        @param doc  The document.
        @param revID  The ID of the revision being inserted.
        @param body  The (JSON) body of the revision.
        @param deleted  True if this revision is a deletion (tombstone).
        @param hasAttachments  True if this revision contains an _attachments dictionary.
        @param allowConflict  If false, and the parent is not a leaf, a 409 error is returned.
        @param outError  Error information is stored here.
        @return True on success. */
    bool c4doc_insertRevision(C4Document *doc,
                              C4Slice revID,
                              C4Slice body,
                              bool deleted,
                              bool hasAttachments,
                              bool allowConflict,
                              C4Error *outError);
    /** Adds a revision to a document, plus its ancestors (given in reverse chronological order.)
        On success, the new revision will be selected.
        Must be called within a transaction.
        @param doc  The document.
        @param revID  The ID of the revision being inserted.
        @param body  The (JSON) body of the revision.
        @param deleted  True if this revision is a deletion (tombstone).
        @param hasAttachments  True if this revision contains an _attachments dictionary.
        @param history  The ancestors' revision IDs, starting with the parent, in reverse order.
        @param historyCount  The number of items in the history array.
        @param outError  Error information is stored here.
        @return The number of revisions added to the document, or -1 on error. */

    int c4doc_insertRevisionWithHistory(C4Document *doc,
                                        C4Slice revID,
                                        C4Slice body,
                                        bool deleted,
                                        bool hasAttachments,
                                        C4Slice history[],
                                        unsigned historyCount,
                                        C4Error *outError);
    /** Sets a document's docType. (By convention this is the value of the "type" property of the current revision's JSON; this value can be used as optimization when indexing a view.)
        The change will not be persisted until the document is saved. */
    bool c4doc_setType(C4Document *doc, C4Slice docType, C4Error *outError);
    /** Saves changes to a C4Document.
        Must be called within a transaction.
        The revision history will be pruned to the maximum depth given. */
    bool c4doc_save(C4Document *doc,
                    unsigned maxRevTreeDepth,
                    C4Error *outError);